# android-pacman

./: README.md  readgabe.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jeep/java/pacman/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  pacmanlib.cpp
app/src/main/cpp/graphics/animation/: Animation.cpp  Plume.cpp  Plume.h  Pulsation.cpp  Pulsation.h
app/src/main/cpp/graphics/ui/controls/: Label.cpp
app/src/main/cpp/graphics/ui/menu/: GameOverMenu.cpp  WinMenu.cpp
app/src/main/cpp/logic/: Engine.cpp
app/src/main/cpp/logic/actors/: Pacman.h
app/src/main/cpp/logic/actors/monsters/: CleverMonster.cpp
app/src/main/cpp/managers/: Art.cpp  Statistics.h  Store.cpp
app/src/main/java/com/zagayevskiy/pacman/: PacmanView.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/jeep/java/pacman/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
